# nt_emu

./: .gitignore  .gitmodules  CLAUDE.md  README.md  font_debug  font_debug.cpp  pyproject.toml  test_fonts.cpp
PRPs/: add-gui-display-simulation.md  audio-interface-selection-window.md  display-drawing-api.md  disting-nt-vcv-rack-plugin.md  distingnt-plugin-refactoring.md  implement-interactive-controls.md  implement-real-cv-voltage-display.md  midi-input-output-integration.md  nt-emulator-prp.md  plugin-gui-integration.md  prp_vcv_reload_menu.md  prp_vcv_ui_plugin_connection.md  real-time-parameter-sync.md  rebrand-nt-emu-module.md  reproduce-disting-nt-ui-faithfully.md  vcv-fix-encoders-task.md  vcv-ntemu-safe-refactoring.md  vcv-panel-update-task.md  vcv-panel-validation-mcp.md  vcv-parameter-menu-task.md  vcv-plugin-loader-task.md  wire-plugin-inputs-outputs.md
docs/: COMPREHENSIVE-PROJECT-STATUS.md  DOCUMENTATION-CORRECTIONS-2025-10-19.md  HARDWARE-CONTROLS-SPEC.md  ORCHESTRA-STATUS.md  PROJECT-STATUS-UPDATED.md  ROADMAP-2025-10-19.md  architecture-decisions.md  architecture-emulator.md  architecture-fact-check-report.md  architecture-vcv-plugin.md  bmm-workflow-status.md  bus-architecture-correction.md  development-guide.md  epics.md  index.md  integration-architecture.md  pixel_format.md  prd.md  product-brief-nt_emu-2025-10-19.md  (+9 more)
emulator/: CMakeLists.txt  CMakeLists_console.txt  README.md  setup_deps.sh
emulator/build_gui/: CMakeCache.txt  DistingNTEmulator  Makefile  cmake_install.cmake  imgui.ini
emulator/build_gui/test_plugins/: Makefile  cmake_install.cmake  simple_gain.dylib
emulator/include/distingnt/: api.h  slot.h  wav.h
emulator/src/: main.cpp  main_console.cpp
emulator/src/core/: api_shim.cpp  api_shim.h  audio_device_manager.cpp  audio_device_manager.h  audio_engine.cpp  audio_engine.h  emulator.cpp  emulator.h  emulator_console.cpp  emulator_console.h  fonts.cpp  fonts.h  midi_handler.cpp  midi_handler.h  plugin_loader.cpp  plugin_loader.h
emulator/src/hardware/: display.cpp  display.h  hardware_interface.cpp  hardware_interface.h  io_manager.cpp  io_manager.h
emulator/src/ui/: audio_panel.cpp  audio_panel.h  audio_settings_dialog.cpp  audio_settings_dialog.h  main_window.cpp  main_window.h  midi_panel.cpp  midi_panel.h  plugin_panel.cpp  plugin_panel.h
emulator/src/utils/: config.cpp  config.h  file_dialog.h  file_dialog.mm  file_watcher.cpp  file_watcher.h  logger.cpp  logger.h
emulator/test_plugins/: CMakeLists.txt  Makefile.macos  drawtest_plugin.cpp  drawtest_plugin.dylib  drawtest_plugin_clean.dylib  font_test.cpp  gainCustomUI.cpp  pixel_test.cpp  pixel_test.dylib
emulator/test_plugins/examples/: Makefile  README_PARAMETER_TESTS.md  flexSeqSwitch.dylib  fonttest_plugin.cpp  fonttest_plugin.dylib  fourteen.dylib  gain.cpp  gain.dylib  gainCustomUI.cpp  gainCustomUI.dylib  gainMultichannel.cpp  gainMultichannel.dylib  midiLFO.dylib  modJulia.cpp  modJulia.dylib  monosynth.dylib  multiple.dylib  nt_api_stubs.cpp  oxiremote.cpp  oxiremote.dylib  scaling_demo.dylib  test_all_plugins  test_all_plugins.cpp  test_parameter_values  test_parameter_values.cpp  test_parameters  test_parameters.cpp  test_scaling_demo.cpp  test_simple  test_simple.cpp  test_simple_all  test_simple_all.cpp  test_single  test_single.cpp
emulator/test_plugins/simple_gain/: Makefile  nt_api_stubs.cpp  simple_gain.cpp  simple_gain.dylib
(+189 files in other folders)
